2000-04-11  Richard Braakman  <dark@wapit.com>

	* gwlib/thread.c: Made mutex_destroy silently handle a NULL mutex,
	like other destroy functions.

	* gw/smsc.c: In smscenter_destruct(), also destroy smsc->mutex,
	to fix memory leak.  (Thanks to Paul Keogh)

2000-04-10  Richard Braakman  <dark@wapit.com>

	* gwlib/octstr.c: Corrected off-by-one errors in octstr_convert_range
	and octstr_check_range.

2000-04-10  Richard Braakman  <dark@wapit.com>

	* gwlib/octstr.c: In octstr_search_char_from, don't assert that
	pos <= ostr->len.  Just return -1 in that case.  This preserves
	the old behaviour, and makes the function easier to use.

2000-04-10  Richard Braakman  <dark@wapit.com>

	* gw/wsp_http.c: Made convert_to_self call octstr_duplicate rather
	than returning its argument directly.  Its caller expects to be
	able to free the argument.

2000-04-10  Richard Braakman  <dark@wapit.com>

	* gwlib/octstr.c, gwlib/octstr.h: Reimplemented octstr_search_str
	as octstr_search_cstr, removing the old one.  Added octstr_search
	(for two Octstrs).  Reimplemented octstr_search_char_from to use
	memchr instead of the octstr_get_char interface, for speed.

2000-04-10 Sanna Seppanen <sanna@wapit.com>

	* gwlib/octstr.c,h: octstr_search_str()-function memory-leak fixed.
	If it is still somehow suspicious, please fix it! I do use it in my
	implementations.
	
Sun Apr  9 20:42:08 2000  Lars Wirzenius  <liw@wapit.com>

	* Makefile.in: Added nag target.
	
	* utils/find-long-lines: Wrote.
	
	* test/test_udp.c, test/test_list.c, test/fakewap.c, test/fakesmsc.c:
	Re-formatted some long lines.
	
	* gw/wsp.[ch], gw/wsp_machine-decl.h: Wrote function
	wsp_machine_mark_unused. This marks a WSPMachine as unused.
	
	* gw/wsp.c: wsp_machine_destroy now removes the machine from
	the list of WSPMachines. wsp_shutdown and same_client changed
	correspondingly.  wsp_handle_event calls wsp_machine_destroy if
	it notices the machine becomes unused.
	